--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
   },
   "homepage": "https://github.com/adex001/politico-react#readme",
   "dependencies": {
+    "axios": "^0.18.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "axios": "^0.18.0",
-    "prop-types": "^15.7.2"
+    "reactstrap": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
