--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "reactstrap": "^8.0.0"
+    "reactstrap": "^8.0.0",
+    "tailwindcss": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -42,8 +43,8 @@
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
-    "webpack-cli": "^3.3.2",
     "webpack": "^4.32.0",
+    "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1"
   }
 }
