--- a/package.json
+++ b/package.json
@@ -29,10 +29,17 @@
   "homepage": "https://github.com/adex001/politico-react#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "file-loader": "^4.1.0",
     "prop-types": "^15.7.2",
+    "raw-loader": "^3.1.0",
     "react": "^16.8.6",
+    "react-dedux": "^0.4.0-beta.4",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "reactstrap": "^8.0.0",
+    "redux": "^4.0.4",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
     "tailwindcss": "^1.0.5"
   },
   "devDependencies": {
