--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server",
+    "start:dev": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
