--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     ]
   },
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server",
-    "start:dev": "webpack-dev-server --open"
+    "build": "rm -rf dist && webpack --env.mode production",
+    "start:dev": "webpack-dev-server --open",
+    "heroku-postbuild": "npm run build",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -41,9 +42,7 @@
     "redux": "^4.0.4",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "tailwindcss": "^1.0.5"
-  },
-  "devDependencies": {
+    "tailwindcss": "^1.0.5",
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
@@ -52,7 +51,10 @@
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.32.0",
-    "webpack-cli": "^3.3.2",
+    "webpack-cli": "^3.3.2"
+ 
+  },
+  "devDependencies": {
     "webpack-dev-server": "^3.4.1"
   }
 }
