--- a/package.json
+++ b/package.json
@@ -54,10 +54,8 @@
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.32.0",
-    "webpack-cli": "^3.3.2"
- 
-  },
-  "devDependencies": {
+    "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1"
+ 
   }
 }
