--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "start": "webpack-dev-server --open",
-    "start:dev": "webpack-dev-server --open",
-    "heroku-postbuild": "npm run build"
+    "start:dev": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
