--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-module-resolver": "^3.0.0",
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "compression-webpack-plugin": "^3.0.0",
     "date-fns": "^1.30.1",
@@ -76,6 +77,7 @@
     "react-router-dom": "^5.0.1",
     "react-router-redux": "^4.0.8",
     "react-toastify": "^5.3.1",
+    "reactstrap": "^8.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
